--- a/Invoice/report/PO_EVENT_2.jrxml
+++ b/Invoice/report/PO_EVENT_2.jrxml
@@ -3,116 +3,70 @@
 	<property name="ireport.zoom" value="1.0245201830476072"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="date1" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="date2" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="perusahaan" class="java.lang.String">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="klien" class="java.lang.String">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
 	<queryString>
-		<![CDATA[SELECT
-    pe.PO_EVENT_ID,
-    pe.PO_EVENT_NO,
-    k.NO_KONTRAK,
-    pe.KEGIATAN,
-    pe.TANGGAL,
-    pe.JUMLAH,
-    pe.KETERANGAN,
-    pe.BUKTI,
-    de.*,
-    dr.URAIAN AS URAIA,
-    dr.DETAIL AS DETAI,
-    dr.HARGA AS HARG,
-    tr.*
-FROM
-    PO_EVENT pe
-        INNER JOIN
-    KONTRAK k ON pe.KONTRAK_ID = k.NO_KONTRAK
-        INNER JOIN
-    DETAIL_EVENT de ON pe.PO_EVENT_NO = de.PO_EVENT_NO
-        INNER JOIN
-    DETAIL_REIMBURSE dr ON pe.PO_EVENT_NO = dr.PO_EVENT_NO
-        INNER JOIN
-    TAGIHAN_REIMBURSE tr ON pe.PO_EVENT_NO = tr.PO_EVENT_NO
-        INNER JOIN
-    MASTER_PERUSAHAAN mp ON k.MASTER_PERUSAHAAN_ID = mp.MASTER_PERUSAHAAN_ID
-WHERE
-    mp.NAME = $P{perusahaan} OR k.PROJECT = $P{klien} AND
-    pe.TANGGAL BETWEEN $P{date1} AND $P{date2};]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="PO_EVENT_ID" class="java.lang.Integer">
+	<field name="poEventId" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PO_EVENT_NO" class="java.lang.String">
+	<field name="poEventNo" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="NO_KONTRAK" class="java.lang.String">
+	<field name="noKontrak" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="KEGIATAN" class="java.lang.String">
+	<field name="kegiatan" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="TANGGAL" class="java.sql.Date">
+	<field name="tanggal" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="JUMLAH" class="java.math.BigDecimal">
+	<field name="jumlah" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="KETERANGAN" class="java.lang.String">
+	<field name="keterangan" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="BUKTI" class="java.lang.Object">
+	<field name="detailEventId" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="DETAIL_EVENT_ID" class="java.lang.Integer">
+	<field name="uraian" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="URAIAN" class="java.lang.String">
+	<field name="detail" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="DETAIL" class="java.lang.String">
+	<field name="vol1" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="VOL_1" class="java.lang.Integer">
+	<field name="jenis1" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="JENIS_1" class="java.lang.String">
+	<field name="vol2" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="VOL_2" class="java.lang.Integer">
+	<field name="jenis2" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="JENIS_2" class="java.lang.String">
+	<field name="hargaSatuan" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="HARGA_SATUAN" class="java.math.BigDecimal">
+	<field name="total" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="TOTAL" class="java.math.BigDecimal">
+	<field name="uraianDr" class="java.lang.String"/>
+	<field name="detailDr" class="java.lang.String"/>
+	<field name="hargaDr" class="java.lang.String"/>
+	<field name="tagihanReimbuseIdTr" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="URAIA" class="java.lang.String"/>
-	<field name="DETAI" class="java.lang.String"/>
-	<field name="HARG" class="java.math.BigDecimal"/>
-	<field name="TAGIHAN_REIMBURSE_ID" class="java.lang.Integer">
+	<field name="poNomorTr" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PO_NOMOR" class="java.lang.String">
+	<field name="catatanTr" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="CATATAN" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="MASTER_MEDIA_ID" class="java.lang.Integer">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="PPN_IMAGE" class="java.lang.Object">
+	<field name="masterMediaId" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<background>
@@ -146,7 +100,7 @@ WHERE
 			<textField>
 				<reportElement x="122" y="9" width="251" height="20" uuid="f9f4c913-eb11-477e-a219-30f485f04ac0"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{PO_EVENT_NO}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{poEventNo}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
@@ -226,35 +180,35 @@ WHERE
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{NO_KONTRAK}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{noKontrak}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="172" y="1" width="115" height="19" uuid="c93241ef-2afc-47f0-b703-a6759295c46d"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{KEGIATAN}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{kegiatan}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="287" y="1" width="100" height="19" uuid="5b6c8911-9143-44bc-8773-9c824783e5d4"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{TANGGAL}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tanggal}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="387" y="1" width="100" height="19" uuid="0c78a4ac-744a-4841-9aa2-52d7554aa872"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{JUMLAH}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{jumlah}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="489" y="1" width="287" height="19" uuid="5b0fd307-b5e7-4fcf-90b4-713f2b925c41"/>
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{KEGIATAN}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{keterangan}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
